feat(husky): implemeted linting with husky

--- a/index.html
+++ b/index.html
@@ -9,24 +9,16 @@
     <!-- Primary Meta Tags -->
     <title>My Admin</title>
     <meta name="title" content="My Admin" />
-    <meta
-      name="description"
-      content="Admin Dashboard Starter"
-    />
+    <meta name="description" content="Admin Dashboard Starter" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="My Admin" />
-    <meta
-      property="og:description"
-      content="Admin Dashboard Starter"
-    />
-   
+    <meta property="og:description" content="Admin Dashboard Starter" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:description"  
-    content="Admin Dashboard Starter" />
+    <meta property="twitter:description" content="Admin Dashboard Starter" />
 
     <meta name="theme-color" content="#fff" />
   </head>
